# rulf_3d

./: Cargo.toml  LICENSE  README.md
asset/: fillscreen.wgsl  firstperson_floorceil.wgsl  firstperson_wall_compute.wgsl  firstperson_wall_frag.wgsl  minimap_actor.wgsl  minimap_wall.wgsl  texture_screen_blit.wgsl
src/: app.rs  asset.rs  firstperson.rs  framework.rs  game.rs  geometry.rs  input.rs  lib.rs  minimap.rs  raycasting.rs  rendering.rs  wall.rs  webgpu.rs
src/app/: actor.wgsl  game.rs  input.rs  renderer.rs  wall.wgsl
src/app/game/: collision.rs
src/asset/: firstperson_floorceil.wgsl  firstperson_wall.wgsl  firstperson_wall_compute.wgsl  firstperson_wall_frag.wgsl  line.wgsl  simplevert_yellow.wgsl
src/firstperson/: floorceil.rs  sprite.rs  wall.rs  wall_raycast.rs
src/game/: collision.rs
src/minimap/: actor.rs  wall.rs
src/raycasting/: floor.rs  wall.rs
src/rendering/: actor.wgsl  minimap.rs  wall.wgsl
tests/: intersection.rs
