[package]
name = "rulf_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.3", features = [ "derive" ] }
glam = { version = "0.25.0", features = [ "bytemuck" ] }
image = "0.24.9"
pollster = "0.3.0"
wgpu = "0.19.2"
winit = "0.29.12"

[[bin]]
name = "dev"
test = true
bench = false

# <Candidate libraries for future use>
# audio: rodio
# gui: iced, glyphon